--- a/SeleniumTestNG/test-output/emailable-report.html
+++ b/SeleniumTestNG/test-output/emailable-report.html
@@ -9,11 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">9,131</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">7,193</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.obsquara.SeleniumTestNG.WebTable</td><td><a href="#m0">identifyName</a></td><td rowspan="1">1694801673011</td><td rowspan="1">833</td></tr><tr class="passedeven"><td><a href="#m1">tableList</a></td><td rowspan="1">1694801676891</td><td rowspan="1">681</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.obsquara.SeleniumTestNG.PopUp</td><td><a href="#m0">popup</a></td><td rowspan="1">1694889152079</td><td rowspan="1">2533</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.obsquara.SeleniumTestNG.WebTable#identifyName</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.obsquara.SeleniumTestNG.WebTable#tableList</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.obsquara.SeleniumTestNG.PopUp#popup</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
