--- a/SeleniumTestNG/test-output/old/Default suite/methods.html
+++ b/SeleniumTestNG/test-output/old/Default suite/methods.html
@@ -1,16 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a697e7">  <td>23/09/15 23:44:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WebTable.identifyName()[pri:0, instance:com.obsquara.SeleniumTestNG.WebTable@49e53c76]">identifyName</td> 
-  <td>main@1010670443</td>   <td></td> </tr>
-<tr bgcolor="f96c77">  <td>23/09/15 23:44:37</td>   <td>4563</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.driverCloseOrQuit()[pri:0, instance:com.obsquara.SeleniumTestNG.WebTable@49e53c76]">&lt;&lt;driverCloseOrQuit</td> 
-<td>&nbsp;</td>  <td>main@1010670443</td>   <td></td> </tr>
-<tr bgcolor="a697e7">  <td>23/09/15 23:44:36</td>   <td>3880</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WebTable.tableList()[pri:0, instance:com.obsquara.SeleniumTestNG.WebTable@49e53c76]">tableList</td> 
-  <td>main@1010670443</td>   <td></td> </tr>
-<tr bgcolor="f96c77">  <td>23/09/15 23:44:34</td>   <td>1071</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.instilBrowser()[pri:0, instance:com.obsquara.SeleniumTestNG.WebTable@49e53c76]">&gt;&gt;instilBrowser</td> 
-<td>&nbsp;</td>  <td>main@1010670443</td>   <td></td> </tr>
-<tr bgcolor="f96c77">  <td>23/09/15 23:44:34</td>   <td>1071</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.instilBrowser()[pri:0, instance:com.obsquara.SeleniumTestNG.WebTable@49e53c76]">&gt;&gt;instilBrowser</td> 
-<td>&nbsp;</td>  <td>main@1010670443</td>   <td></td> </tr>
-<tr bgcolor="f96c77">  <td>23/09/15 23:44:37</td>   <td>4563</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.driverCloseOrQuit()[pri:0, instance:com.obsquara.SeleniumTestNG.WebTable@49e53c76]">&lt;&lt;driverCloseOrQuit</td> 
-<td>&nbsp;</td>  <td>main@1010670443</td>   <td></td> </tr>
+<tr bgcolor="f96c77">  <td>23/09/17 00:02:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.instilBrowser()[pri:0, instance:com.obsquara.SeleniumTestNG.PopUp@38d8f54a]">&gt;&gt;instilBrowser</td> 
+<td>&nbsp;</td>  <td>main@1725008249</td>   <td></td> </tr>
+<tr bgcolor="a697e7">  <td>23/09/17 00:02:32</td>   <td>4118</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PopUp.popup()[pri:0, instance:com.obsquara.SeleniumTestNG.PopUp@38d8f54a]">popup</td> 
+  <td>main@1725008249</td>   <td></td> </tr>
+<tr bgcolor="f96c77">  <td>23/09/17 00:02:34</td>   <td>6660</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.driverCloseOrQuit()[pri:0, instance:com.obsquara.SeleniumTestNG.PopUp@38d8f54a]">&lt;&lt;driverCloseOrQuit</td> 
+<td>&nbsp;</td>  <td>main@1725008249</td>   <td></td> </tr>
 </table>
