--- a/SeleniumTestNG/test-output/old/Default suite/methods-not-run.html
+++ b/SeleniumTestNG/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,9 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.obsquara.SeleniumTestNG.Assertion.assertNotNullSample</td></tr>
+<tr><td>com.obsquara.SeleniumTestNG.Assertion.assertsEqualsSingleinputform</td></tr>
+<tr><td>com.obsquara.SeleniumTestNG.Assertion.softAssert</td></tr>
+<tr><td>com.obsquara.SeleniumTestNG.Assertion.notEqualSample</td></tr>
+<tr><td>com.obsquara.SeleniumTestNG.Assertion.assertNullSample</td></tr>
+<tr><td>com.obsquara.SeleniumTestNG.Assertion.asserTrueRadioButtonM</td></tr>
+<tr><td>com.obsquara.SeleniumTestNG.Assertion.assertFalsRadiobuttonDisable</td></tr>
 </table>
