--- a/SeleniumTestNG/test-output/old/Default suite/methods.html
+++ b/SeleniumTestNG/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9f71a9">  <td>23/09/18 12:09:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PopUp.alertmet()[pri:0, instance:com.obsquara.SeleniumTestNG.PopUp@689604d9]">alertmet</td> 
-  <td>main@961409111</td>   <td></td> </tr>
-<tr bgcolor="a697e7">  <td>23/09/18 12:09:55</td>   <td>-4164</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.instilBrowser()[pri:0, instance:com.obsquara.SeleniumTestNG.PopUp@689604d9]">&gt;&gt;instilBrowser</td> 
-<td>&nbsp;</td>  <td>main@961409111</td>   <td></td> </tr>
-<tr bgcolor="a697e7">  <td>23/09/18 12:10:00</td>   <td>765</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.driverCloseOrQuit()[pri:0, instance:com.obsquara.SeleniumTestNG.PopUp@689604d9]">&lt;&lt;driverCloseOrQuit</td> 
-<td>&nbsp;</td>  <td>main@961409111</td>   <td></td> </tr>
+<tr bgcolor="9f71a9">  <td>23/09/20 18:08:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Assertion.verifyShowButtontext()[pri:0, instance:com.obsquara.SeleniumTestNG.Assertion@2a4fb17b]">verifyShowButtontext</td> 
+  <td>main@1536471117</td>   <td></td> </tr>
+<tr bgcolor="a697e7">  <td>23/09/20 18:08:32</td>   <td>57</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.driverCloseOrQuit()[pri:0, instance:com.obsquara.SeleniumTestNG.Assertion@2a4fb17b]">&lt;&lt;driverCloseOrQuit</td> 
+<td>&nbsp;</td>  <td>main@1536471117</td>   <td></td> </tr>
+<tr bgcolor="a697e7">  <td>23/09/20 18:08:27</td>   <td>-4748</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.instilBrowser()[pri:0, instance:com.obsquara.SeleniumTestNG.Assertion@2a4fb17b]">&gt;&gt;instilBrowser</td> 
+<td>&nbsp;</td>  <td>main@1536471117</td>   <td></td> </tr>
 </table>
